# learn-generative-ai

./: .gitignore  README.md
-01_prompt_engerring/: readme.md
-02_python/: readme.md
00-Hello-world/: hello_world.ipynb
00_ai_essentials/: readme.md
00_prompt_engerring/: readme.md
00_prompt_engineering/: readme.md
01-PromptEngineering/: 1-guidelines.ipynb  3-summarizing.ipynb
01_gen_ai_for_everyone/: readme.md
01_hello_world/: hello_world.ipynb
01_multiple_rules/: multiple_rules.ipynb
02_gemini/: readme.md
02_multiple_roles/: multiple_rules.ipynb
02_python_crash_course/: readme.md
02_python_quick_start/: readme.md
02_step_langchain_functions/: L1-openai_functions_student.ipynb
02_streaming_response/: app.py  streaming_response.ipynb
03_gpts/: readme.md
03_streaming_response/: streaming_response.ipynb
03_ui_streamlit/: readme.md
04_function_calling/: function_calling.ipynb
04_gemini/: .gitignore
04_json_mode/: json_mode.ipynb
05_function_calling/: function_calling.ipynb
05_microservices_all_in_one_platform/07_create_first_microservice/: README 2.md  apprunner.yaml  pyproject.toml  readme.md
05_microservices_all_in_one_platform/07_create_first_microservice/fastapi_neon/: main.py  settings.py
05_microservices_all_in_one_platform/08_create_project/test_poetry/: pyproject.toml
05_microservices_all_in_one_platform/09_create_project/project_youtube/: pyproject.toml
05_microservices_all_in_one_platform/09_create_project/project_youtube/project_youtube/: main.py
05_microservices_all_in_one_platform/09_create_project/project_youtube/tests/: test_myproject.py
05_microservices_all_in_one_platform/09_microservice_helloworld/fastapi-helloworld/: pyproject.toml
05_microservices_all_in_one_platform/09_microservice_helloworld/fastapi-helloworld/fastapi_helloworld/: main.py
05_microservices_all_in_one_platform/10_microservice_helloworld/fastapi_helloworld_online/: README.md  pyproject.toml
05_microservices_all_in_one_platform/10_microservice_helloworld/fastapi_helloworld_online/fastapi_helloworld_online/: main.py
05_microservices_all_in_one_platform/10_microservice_helloworld/fastapi_helloworld_online/tests/: test_main.py
05_microservices_all_in_one_platform/12_fastapi_sqlmodel/fastapi/Multiple Models with FastAPI/: pyproject.toml
05_microservices_all_in_one_platform/12_fastapi_sqlmodel/fastapi/Multiple Models with FastAPI/heroapi_uit/: main.py
05_microservices_all_in_one_platform/12_fastapi_sqlmodel/hero_api/: pyproject.toml
05_microservices_all_in_one_platform/12_fastapi_sqlmodel/hero_api/hero_api/: main.py
05_microservices_all_in_one_platform/14_docker/02_containerizing/: Dockerfile  README.md  pyproject.toml
05_microservices_all_in_one_platform/14_docker/02_containerizing/fastapi_neon/: main.py
05_microservices_all_in_one_platform/14_docker/02_containerizing/tests/: test_main.py
05_microservices_all_in_one_platform/15_event_driven/02_kafka_and_python/fastapi-hello/: .dockerignore  Dockerfile  pyproject.toml
05_microservices_all_in_one_platform/15_event_driven/02_kafka_and_python/fastapi-hello/app/: main.py
05_microservices_all_in_one_platform/15_event_driven/03_protobuf/microservice_02/: pyproject.toml
05_microservices_all_in_one_platform/15_event_driven/03_protobuf/microservice_02/app/: settings.py
05_microservices_all_in_one_platform/16_oauth2_auth/02_authorize_endpoints/auth_service/: Dockerfile  pyproject.toml
05_microservices_all_in_one_platform/16_oauth2_auth/02_authorize_endpoints/auth_service/app/: main.py
05_microservices_all_in_one_platform/17_kong/03_merge-specs/specs-combiner/: Dockerfile  pyproject.toml
05_microservices_all_in_one_platform/17_kong/03_merge-specs/specs-combiner/app/: main.py  settings.py
06_assistants_api/: assistants.ipynb
06_assistants_code_interpreter/: assistants_code_interpreter.ipynb
06_chatgpt/14_Cloud_Native_AI(ARTIFICIAL INTELLIGEN)CE/01_class/backend/: pyproject.toml
06_chatgpt/14_Cloud_Native_AI(ARTIFICIAL INTELLIGEN)CE/01_class/backend/app/: main.py
06_chatgpt/14_cloud_nagive_ai/01_class/code/: .backupenv  Dockerfile  pyproject.toml
06_chatgpt/14_cloud_nagive_ai/01_class/code/project1/01_hello_world/: hello_world.ipynb
06_chatgpt/14_cloud_nagive_ai/01_class/code/project1/01_hello_world/.ipynb_checkpoints/: hello_world-checkpoint.ipynb
06_chatgpt/14_cloud_nagive_ai/01_class/code/project1/02_multiple_roles/: multiple_rules.ipynb
06_chatgpt/14_cloud_nagive_ai/01_class/code/project1/04_json_mode/.ipynb_checkpoints/: json_mode-checkpoint.ipynb
06_chatgpt/14_cloud_nagive_ai/01_class/code/project1/05_function_calling/.ipynb_checkpoints/: function_calling-checkpoint.ipynb
06_chatgpt/14_cloud_nagive_ai/01_class/code/project1/06_assistants_code_interpreter/: assistants_code_interpreter.ipynb
06_chatgpt/14_cloud_nagive_ai/01_class/code/project1/07_assistants_knowledge_retrieval/: assistants_knowledge_retrieval.ipynb
06_chatgpt/14_cloud_nagive_ai/01_class/code/project1/07_assistants_knowledge_retrieval/.ipynb_checkpoints/: assistants_knowledge_retrieval-checkpoint.ipynb
06_chatgpt/14_cloud_nagive_ai/01_class/code/project1/08_assistants_function_calling/: .env_bak  assistants_function_calling.ipynb
06_chatgpt/14_cloud_nagive_ai/01_class/code/project1/09_projects/01_financial_financial_analyst/: readme.md
06_chatgpt/14_cloud_nagive_ai/01_class/code/project1/10_multimodal_genai/01_text-to-speech/: 01_text-to-speech.ipynb  01_text-to-speech.py
06_chatgpt/14_cloud_native_ai/02_streaming_fastapi_openai/streaming_fastapi_openai/: pyproject.toml
06_chatgpt/14_cloud_native_ai/02_streaming_fastapi_openai/streaming_fastapi_openai/app/: main.py
06_streamlit_genai_apps/: readme.md
07_assistants_knowledge_retrieval/: assistants_knowledge_retrieval.ipynb
07_streamlit_genai_projects/: readme.md
08_ai_agents/: readme.md
08_assistants_function_calling/: assistants_function_calling.ipynb
09_agents/: readme.md
09_api_genai_db/: readme.md
09_containers_development_deployment/: readme.md
09_genai_marketplaces/: readme.md
09_gpts/: readme.md
(+826 files in other folders)
