[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = ["Zia Khan <ziaukhan@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
