[tool.poetry]
name = "project-youtube"
version = "0.1.0"
description = ""
authors = ["Sir Qasim <m.qasim077@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
